@@ -1,5 +1,4 @@
 FIXMES:
-- piano roll button3 popup /Edit/ gets undo/redo in wrong position
 - fix multi-action factories
 - implement gdgdata_get_stencil_gadget() for a default factory boundary
 - add one-shot property to factories
@@ -14,7 +13,6 @@ FIXMES:
 - delete BstActionRegions
 - i18n in xml
 - Tools, Demo
-- Help/Development
 - remove bstmenus.[hc]
 - remove bstcatalog.[hc]
 
